# controllers/productController.js
@@ -59,4 +59,35 @@ const createProduct = async (req, res) => {
     }
 };
 
-module.exports = { getAllProducts, getProductById, createProduct };
+// Update product
+const updateProduct = async (req, res) => {
+    // #swagger.tags = ['Products']
+    try {
+        const id = req.params.id;
+        if (ObjectId.isValid(id) === false) {
+            return res.status(400).json({ message: "Invalid product ID." });
+        }
+        const objectId = new ObjectId(id);
+        const data = req.body;
+        const productData = {
+            productId: data.productId,
+            productName: data.productName,
+            productDescription: data.productDescription,
+            productColor: data.productColor,
+            productBrand: data.productBrand,
+            productPrice: parseFloat(data.productPrice),
+            productImage: data.productImage
+        };
+        const product = new Product();
+        const result = await product.update(objectId, productData);
+        if (result.modifiedCount > 0) {
+            res.status(204).send();
+        } else {
+            res.status(500).json(result.error || "Could not update product.")
+        }
+    } catch (error) {
+        return res.status(500).json({ message: "Could not update product." });
+    }
+};
+
+module.exports = { getAllProducts, getProductById, createProduct, updateProduct };
